--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^4.1.1
   cloud_firestore: ^6.0.2
   fl_chart: ^0.68.0
+  shared_preferences: ^2.2.3
+  intl: ^0.19.0
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
+  assets:
+    - assets/images/welcome_illustration.jpg
+    - assets/sounds/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
