--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,13 @@ dependencies:
   firebase_core: ^4.1.1
   cloud_firestore: ^6.0.2
   fl_chart: ^0.68.0
-  shared_preferences: ^2.2.3
   intl: ^0.19.0
   audioplayers: ^6.5.1
+  flutter_local_notifications: ^17.2.1
+  timezone: ^0.9.3
+  alarm: ^5.1.5
+  shared_preferences: ^2.2.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
