--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   disable_battery_optimization: 1.1.2
-  
+  url_launcher: ^6.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
