--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   path_provider: ^2.0.11
   disable_battery_optimization: 1.1.2
   url_launcher: ^6.3.1
+  webview_flutter: ^4.13.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
