--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,5 +37,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/welcome_illustration.jpg
+    - assets/images/
     - assets/sounds/
