--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   disable_battery_optimization: 1.1.2
   url_launcher: ^6.3.1
   webview_flutter: ^4.13.0
+  firebase_auth: ^6.1.1
 
 dev_dependencies:
   flutter_test:
