--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   url_launcher: ^6.3.1
   webview_flutter: ^4.13.0
   firebase_auth: ^6.1.1
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,20 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo_icon.png"
+
+flutter_native_splash:
+  color: "#FFFFFF" # This sets the background to white
+  image: assets/images/logo_icon.png # <-- SET PATH TO YOUR LOGO
+  android: true
+  ios: true
+  android_gravity: center
+  ios_content_mode: center
 
 flutter:
   uses-material-design: true
